z-index of tip fix

--- a/css/build.css
+++ b/css/build.css
@@ -1128,6 +1128,7 @@ header {
 .tip-container {
   position: relative; }
   .tip-container .tip-block {
+    z-index: 10;
     display: none;
     position: absolute;
     top: 0;
